--- a/src/components/landing_page/Landing.css
+++ b/src/components/landing_page/Landing.css
@@ -12,19 +12,19 @@ h1{
   font-family: "Montserrat";
   font-size: 100px;
   font-weight: bold;
-  line-height: 80%
+  line-height: 100%
 }
 
 .text {
   white-space: pre-wrap;
   font-family: "Fira Code", monospace;
   font-size: 28px;
-  padding-bottom: 40px;
+  margin-bottom: 100px;
   color: #d8d8d8;
 }
 
 #leftbutton{
-  padding-right: 100px;
+  margin-right: 100px;
 }
 
 .white {
